force-app/main/default/objects/Property__c/fields/Built_Year__c.field-meta.xml
<CustomField>
    <fullName>Built_Year__c</fullName>
    <label>Built Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>