force-app/main/default/objects/Property__c/fields/Days_on_Market__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Market__c</fullName>
    <formula>IF(
  NOT(ISBLANK( Listed_Date__c )),
  IF(
    TEXT(Status__c) = &quot;Sold&quot;,
    TODAY() - Listed_Date__c,
    TODAY() - Listed_Date__c
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days on Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>