force-app/main/default/objects/Property__c/fields/Garage_spaces__c.field-meta.xml
<CustomField>
    <fullName>Garage_spaces__c</fullName>
    <label>Garage spaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>