force-app/main/default/objects/Property__c/fields/Have_a_fireplace__c.field-meta.xml
<CustomField>
    <fullName>Have_a_fireplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have a fireplace</label>
    <type>Checkbox</type>
</CustomField>