force-app/main/default/objects/Property__c/fields/HOA_Fees__c.field-meta.xml
<CustomField>
    <fullName>HOA_Fees__c</fullName>
    <label>HOA Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>