force-app/main/default/objects/Property__c/fields/Listed_Date__c.field-meta.xml
<CustomField>
    <fullName>Listed_Date__c</fullName>
    <label>Listed Date</label>
    <type>Date</type>
</CustomField>