force-app/main/default/objects/Property__c/fields/Listing_price__c.field-meta.xml
<CustomField>
    <fullName>Listing_price__c</fullName>
    <label>Listing price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>