force-app/main/default/objects/Property__c/fields/Location_Site__c.field-meta.xml
<CustomField>
    <fullName>Location_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Site</label>
    <referenceTo>LocationSite__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>