force-app/main/default/objects/Property__c/fields/Lot_size__c.field-meta.xml
<CustomField>
    <fullName>Lot_size__c</fullName>
    <label>Lot size</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>