force-app/main/default/objects/Property__c/fields/Luxury_Property__c.field-meta.xml
<CustomField>
    <fullName>Luxury_Property__c</fullName>
    <description>Automatically identifies luxury properties based on criteria</description>
    <formula>OR(
  Listing_price__c &gt; 1000000,
  AND(Price_Per_SqFt__c &gt; 500, Square_footage__c &gt; 3000),
   Have_a_pool__c  = TRUE &amp;&amp; Square_footage__c &gt; 4000,
  Garage_spaces__c &gt;= 3 &amp;&amp; Square_footage__c &gt; 3500
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Luxury Property</label>
    <type>Checkbox</type>
</CustomField>