force-app/main/default/objects/Property__c/fields/Market_value__c.field-meta.xml
<CustomField>
    <fullName>Market_value__c</fullName>
    <label>Market value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>