force-app/main/default/objects/Property__c/fields/Price_Per_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_SqFt__c</fullName>
    <formula>IF(
  AND(NOT(ISBLANK(Listing_price__c)), Square_footage__c &gt; 0),
  Listing_price__c / Square_footage__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Per SqFt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>