force-app/main/default/objects/Property__c/fields/PrimaryAgent__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Agent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. Please select the Agent with Status as Active</errorMessage>
        <filterItems>
            <field>Agent__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Please select the Agent with Status as Active</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>AgentProperties</relationshipName>
    <type>Lookup</type>
</CustomField>