force-app/main/default/objects/Property__c/fields/Property_Age__c.field-meta.xml
<CustomField>
    <fullName>Property_Age__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Built_Year__c)),
  YEAR(TODAY()) - Built_Year__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>