force-app/main/default/objects/Property__c/fields/Square_footage__c.field-meta.xml
<CustomField>
    <fullName>Square_footage__c</fullName>
    <label>Square footage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>