force-app/main/default/objects/Property__c/fields/Total_Monthly_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Fees__c</fullName>
    <description>Combines HOA fees and estimated monthly property taxes</description>
    <formula>IF(ISBLANK(HOA_Fees__c), 0, HOA_Fees__c) + 
IF(ISBLANK(Property_Taxes__c), 0, Property_Taxes__c / 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>