force-app/main/default/objects/Property__c/validationRules/Listing_Price_vs_Market_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Listing_Price_vs_Market_Value</fullName>
    <active>true</active>
    <description>Ensures listing price is reasonable compared to market value</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Listing_price__c)),
  NOT(ISBLANK(Market_value__c)),
  OR(
    Listing_price__c &gt; (Market_value__c * 1.5),
    Listing_price__c &lt; (Market_value__c * 0.5)
  )
)</errorConditionFormula>
    <errorDisplayField>Listing_price__c</errorDisplayField>
    <errorMessage>Listing price should be within 50% of market value. Please verify pricing.</errorMessage>
</ValidationRule>