force-app/main/default/objects/Property__c/listViews/APAC_Queue_Property.listView-meta.xml
<ListView>
    <fullName>APAC_Queue_Property</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC Queue</label>
    <queue>APAC_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>